Code clean and worked on tests

--- a/.gitignore
+++ b/.gitignore
@@ -144,9 +144,13 @@ stamp-h[1-9]
 /tests/esedb_test_multi_value
 /tests/esedb_test_notify
 /tests/esedb_test_page
+/tests/esedb_test_page_header
+/tests/esedb_test_page_tags_value
 /tests/esedb_test_page_tree
+/tests/esedb_test_page_tree_value
 /tests/esedb_test_page_value
 /tests/esedb_test_record
+/tests/esedb_test_space_tree_value
 /tests/esedb_test_support
 /tests/esedb_test_table
 /tests/esedb_test_table_definition
