--- a/msvscpp/libesedb/libesedb.vcproj
+++ b/msvscpp/libesedb/libesedb.vcproj
@@ -266,6 +266,14 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libesedb\libesedb_page_header.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libesedb\libesedb_page_tags_value.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libesedb\libesedb_page_tree.c"
 				>
 			</File>
@@ -457,6 +465,14 @@
 			</File>
 			<File
 				RelativePath="..\..\libesedb\libesedb_page.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libesedb\libesedb_page_header.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libesedb\libesedb_page_tags_value.h"
 				>
 			</File>
 			<File
